<resources>
    <string name="app_name">SalavatCounter</string>
    <string name="textToast">Цель Установлена!</string>
    <string name="vvediteTsel">Введите Цель!</string>
    <string name="CompleteTsel">Цель достигнута!\nДа вознаградит Вас Аллах</string>
    <string name="ok">OK</string>
    <string name="minus">‒</string>
    <string name="reset">reset</string>
    <string name="_0">0</string>
    <string name="translate">О Аллах! Ниспошли благословение Мухаммаду с первых и до последних дней и в Высшем Собрании (среди ангелов), вплоть до Судного дня</string>
    <string name="salavat">اللَّهُمَّ صَلِّ عَلَى سَيِّدِنَا مُحَمَّدٍ فِي ا لْأَوَّلِينَ وَ ا لْآخِرِ ينَ وَ فِي ا لْمَلَا ءِ ا لْأَ عْلَى اِلَى يَوْمِ ا لدِّينِ</string>
    <string name="salavatFatiha">أللَّهُمَّ صَلِّ وَ سَلِّمْ وَ بَارِكْ عَلَى سَيِّدِنَا مُحَمَّدِنِ الْفَاتِحِ لِمَا أُغْلِقَ وَالْخَاتِمِ لِمَا سَبَقَ وَ نَاصِرِ الْحَقِّ بِالْحَقِّ وَالْهَادِي إِلَى صِرَاطِكَ الْمُسْتَقِيم صَلَّى ٱللَّٰهُ تَعَالَى عَلَيْهِ وَ عَلَى آلِهِ وَ أَ صْحَابِهِ حَقَّ قَدْرِهِ وَ مِقْدَارِهِ الْعَظِيمْ</string>
    <string name="TranslateFatiha">Славословия и приветствия нашему господину Мухаммаду ﷺ. Он - тот, кто открыл нам Твои сокровенные сокровища.
        Он - последнее звено в цепи пророков, он победоносный помощник от Истинного, помогающий с помощью Истинного, он - тот, кто ведет людей по пути праведному!
        Ему и близким его нескончаемые славословия и приветствия.</string>
    <string name="Tsel">ЦЕЛЬ</string>
    <string name="plus">+</string>
    <string name="newTsel">New</string>
    <string name="vvediteNumber">Введите число!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">settings</string>
    <string name="jests">Жесты</string>
    <string name="mysettings">Настройки</string>
    <string name="myvisiable">Видимость</string>
    <string name="mytranscription">Транскрипция</string>
    <string name="mytranslate">Перевод</string>
    <string name="mylanguage">Язык</string>
    <string name="white">Светлая</string>
    <string name="dark">Темная</string>
    <string name="choice">Выбрать</string>

</resources>

